styles/less-is-more.less
//====================================================
//  Color Variables
//====================================================

@less-background: #FFFFFF;
@less-text: #566C75;
@danger: #FF5F56;
@minimize: #FBD852;
@maximize: #8DD07D;
@swipe-archive: @maximize;
@swipe-snooze: @minimize;
@swipe-trash: @danger;
@invalid: @danger;
@sidebar-text: lighten(@less-text, 20%);
@background-gradient: @less-background;


//====================================================
//  Base Overwrites
//====================================================

.column-RootSidebar,
.column-ThreadList,
.column-MessageList,
.column-MessageListSidebar,
.preferences-sidebar,
.preferences-content,
.column-DraftList {
  padding: 5em 2em 2em;
  background: @less-background;
}

.column-RootSidebar,
.account-sidebar {
  background-color: @less-background;
}

.sheet-toolbar-container [data-column='0'] .item-container {
  justify-content: flex-end;
  background-color: @less-background;
}

.sheet-toolbar .btn.btn-toolbar.item-compose {
  margin-right: 0;
  background: transparent;
  border: none;
  box-shadow: none;
  order: 101;
}

.sheet-toolbar .btn.btn-toolbar.item-compose img.content-mask {
  background-color: @sidebar-text;
}

.sheet-toolbar .btn-toolbar {
  background: transparent;
  border: none;
  box-shadow: none;
}

.btn {
  border-radius: 0px;
  border: 0;
  color: @sidebar-text;
  cursor: pointer !important;
  background: transparent;
  box-shadow: none;
}

//====================================================
//  Window Controls
//====================================================

.toolbar-window-controls {
  display: flex;
  margin-top: 9px;
  margin-left: 7px;
  min-width: 72px;
  width: 72px;
}

.toolbar-window-controls button {
  background-color: @sidebar-text;
  background-image: none !important;
  width: 12px;
  height: 12px;
  float: none;
  opacity: 0.5;
  transform: scaleY(0.5);
  border-radius: 0px;
  transition-duration: 150ms;
  transition-property: border-radius, opacity, transform;
}

.toolbar-window-controls:hover button {
  opacity: 1;
  border-radius: 50%;
  transform: scaleY(1);
}

.toolbar-window-controls .close {
  background-color: @danger;
  background-image: none;
  &:hover {
    -webkit-filter: brightness(125%);
  }
}

.toolbar-window-controls .minimize {
  background-color: @minimize;
  background-image: none;
  &:hover {
    -webkit-filter: brightness(125%);
  }
}

.toolbar-window-controls .maximize {
  background-color: @maximize;
  background-image: none;
  &:hover {
    -webkit-filter: brightness(125%);
  }
}

.is-blurred {
  .toolbar-window-controls .close,
  .toolbar-window-controls .minimize,
  .toolbar-window-controls .maximize {
    background-color: fade(@sidebar-text, 50%);
  }
}

//====================================================
//  Sidebar & Account Switcher
//====================================================

.account-switcher {
  top: 10px;
}

.account-sidebar .item,
.account-sidebar .item.selected {
  color: @sidebar-text;
}

.account-sidebar .item {
  font-size: 13px;
  font-weight: 400;
}

.account-sidebar .heading {
  font-size: 10px;
  text-transform: uppercase;
  letter-spacing: 2px;
  color: fade(@sidebar-text, 50%);
  margin-bottom: 8px;
}

.account-sidebar .item img.content-mask,
.account-sidebar .add-item-button img {
  background-color: transparent;
  -webkit-mask-image: none;
}

.account-sidebar {
  .item .name {
    padding-left: 0;
    margin-left: -10px;
  }
  .item.selected {
    background: @less-background;
    color: @less-text;
  }
}

.account-sidebar .item.selected img.content-mask {
  background-color: transparent;
}

.nylas-outline-view .item-container.dropping {
  background: darken(@less-background, 5%);
}

.nylas-outline-view .item-container.dropping .item {
  color: @less-text;
}

.nylas-outline-view .item-container.dropping .item img.content-mask {
  background-color: @less-text;
}

.nylas-outline-view .heading .add-item-button img {
  background: fade(@sidebar-text, 50%);
}

.disclosure-triangle div {
  border-left-color: fade(@sidebar-text, 50%);
  border-top-width: 3px;
  border-bottom-width: 3px;
  border-left-width: 5px;
  transform-origin: 2px;
}


//====================================================
//  Sidebar Count Badges
//====================================================

.nylas-outline-view .item .item-count-box.alt-count {
  background: @less-text;
  color: @less-background;
}

.nylas-outline-view .item .item-count-box {
    color: @less-text;
    box-shadow:
      0 0.5px 0 @less-text,
      0 -0.5px 0 @less-text,
      0.5px 0 0 @less-text,
      -0.5px 0 0 @less-text;
  }

//====================================================
//  Thread List
//====================================================

.column-ThreadList,
.list-container .list-item {
  cursor: pointer !important;
  box-sizing: border-box;
  border: 0 !important;
  background-color: @less-background;
  color: @less-text;
}

body.is-blurred .list-container .list-item.focused,
.list-container .list-item.focused,
.thread-list.handler-split .list-item.selected, {
  background: @less-background;
  color: darken(@less-text, 50%);
  font-weight: bold;
}

.list-container .list-item:hover {
  background-color: darken(@less-background, 5%);
  color: @less-text;
}


.thread-list .list-column,
.draft-list .list-column,
.list-container .list-item.focused .list-column {
  border: 0 !important;
}

.list-tabular .list-tabular-item.keyboard-cursor .list-column:first-child {
  border: 0 !important;
}

.thread-list .thread-icon.thread-icon-unread,
.draft-list .thread-icon.thread-icon-unread {
  background-color: @less-text;
  background-image: none;
  border-radius: 50%;
  height: 10px;
  width: 10px;
  margin-top: 8px;
  margin-left: 7px;
  margin-right: 13px;
  margin-bottom: 8px;
}
/* ... */

